[gd_scene load_steps=18 format=2]

[ext_resource path="res://entities/not_player/entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/not_player/monsters/base.gd" type="Script" id=2]
[ext_resource path="res://entities/not_player/monsters/assets/rat.png" type="Texture" id=3]
[ext_resource path="res://game/detection_boxes/hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/blink.gdshader" type="Shader" id=5]

[sub_resource type="CapsuleShape2D" id=7]
radius = 2.00001
height = 16.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 4.00001
height = 7.99998

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 19, 9 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 19, 0, 19, 9 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 38, 0, 19, 9 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 57, 0, 19, 9 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 76, 0, 19, 9 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 13 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 52.0096

[sub_resource type="CircleShape2D" id=10]

[sub_resource type="CircleShape2D" id=11]
radius = 6.0

[node name="base" instance=ExtResource( 1 )]
material = null
collision_layer = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, -2 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox" index="0"]
visible = false
position = Vector2( 0, -4 )
rotation = 1.57079
shape = SubResource( 8 )

[node name="world_detect" type="Area2D" parent="." index="3"]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="world_detect" index="0"]
polygon = PoolVector2Array( 1, 1, 10, 22, -10, 22, -1, 1 )

[node name="AnimatedSprite" parent="." index="4"]
material = SubResource( 12 )
frames = SubResource( 6 )
frame = 1

[node name="player_detect" type="Area2D" parent="." index="5"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detect" index="0"]
visible = false
shape = SubResource( 9 )

[node name="hurtbox" parent="." index="6" instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 10 )

[node name="state_timer" type="Timer" parent="." index="7"]
one_shot = true

[node name="sprite_timer" type="Timer" parent="." index="8"]
wait_time = 0.1
autostart = true

[node name="soft_collision" type="Area2D" parent="." index="9"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="soft_collision" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 11 )

[connection signal="area_entered" from="player_detect" to="." method="_on_player_detect_area_entered"]
[connection signal="area_exited" from="player_detect" to="." method="_on_player_detect_area_exited"]
[connection signal="hit" from="hurtbox" to="." method="_on_hurtbox_hit"]
[connection signal="timeout" from="state_timer" to="." method="_on_state_timer_timeout"]
[connection signal="timeout" from="sprite_timer" to="." method="_on_sprite_timer_timeout"]
